--- a/web/src/app/game/game-list/game-list.html
+++ b/web/src/app/game/game-list/game-list.html
@@ -1,6 +1,6 @@
 <div layout-gt-sm="row" layout="column" class="game-list-module">
 <div flex-gt-sm="50" flex>
-    <md-toolbar layout="row" class="md-hue-1 ">
+    <md-toolbar layout="row">
         <div class="md-toolbar-tools">
         <span>Active Games</span>
         </div>
@@ -22,7 +22,7 @@
 <md-divider></md-divider>
 
 <div flex-gt-sm="50" flex>
-    <md-toolbar layout="row" class="md-hue-1">
+    <md-toolbar layout="row">
         <div class="md-toolbar-tools">
         <span>Completed Games</span>
         </div>
